--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <p>University of Washington Seattle Campus Tour</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gOmiwd2HS_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Location</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2138.506975009109!2d-122.30994589981609!3d47.65512520959446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x88f353385b97eddc!2sRed+Square!5e0!3m2!1sen!2sus!4v1554326994552!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </body>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <p>University of Washington Seattle Campus Tour</p>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/gOmiwd2HS_c"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <p>Location</p>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2138.506975009109!2d-122.30994589981609!3d47.65512520959446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x88f353385b97eddc!2sRed+Square!5e0!3m2!1sen!2sus!4v1554326994552!5m2!1sen!2sus"
+      width="600"
+      height="450"
+      frameborder="0"
+      style="border:0"
+      allowfullscreen
+    ></iframe>
+  </body>
 </html>
