--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Zikai Song</h1>
+    <p>I am a huge soocer fan</p>
     <h2>My Favorite Soccer Clubs</h2>
     <ul>
       <li>
