--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Application</title>
     <link
-      href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+      href="./jobapp.css"
       rel="stylesheet"
     />
   </head>
